# raytracer-in-anchor

./: .gitignore  Anchor.toml  README.md
programs/artist/: Cargo.toml
programs/artist/src/: lib.rs
programs/canvas/: Cargo.toml
programs/canvas/src/: lib.rs
programs/canvas/src/instructions/: color.rs  create.rs  mod.rs
programs/math/: Cargo.toml
programs/math/src/: lib.rs
programs/math/src/instructions/: elements.rs  equation.rs  mod.rs  operate.rs
tests/: raytracer-in-anchor.ts
